# coel_e33_datalogger_rpi

./: .gitignore  CMakeLists.txt  Makefile  README.md  datalogger_structure.txt  deploy_to_rpi.sh  main.c  modbus_reader.c  tutorial_ds3231_raspberry.md  usb_manager.h  user_cross_compile_setup.cmake
lib/: datalogger.c  datalogger.h  modbus.c  modbus.h  usb_manager.c  usb_manager.h
scripts/: build_libgpiod_arm.sh  build_libmodbus_arm.sh  build_libudev_arm.sh  build_sqlite3_arm.sh  check_cross_compilation.sh  setup_cross_compilation.sh
src/: main.c
